# asana-cli

./: .gitmodules  Cargo.toml
src/: main.rs
src/adapters/: mod.rs
src/adapters/api/: client.rs  dto.rs  mod.rs  task_repo.rs
src/adapters/cache/: mod.rs  moka_cache.rs
src/adapters/config/: file_store.rs  mod.rs
src/adapters/tui/: app.rs  event.rs  md.rs  mod.rs
src/adapters/tui/views/: mod.rs
src/adapters/tui/widgets/: mod.rs  search_bar.rs
src/app/: error.rs  mod.rs  state_manager.rs  task_service.rs
src/application/: error.rs  mod.rs  state_manager.rs  task_service.rs
src/domain/: comment.rs  error.rs  mod.rs  project.rs  task.rs  user.rs  workspace.rs
src/domain/comment/: model.rs
src/domain/project/: model.rs
src/domain/task/: mod.rs  model.rs  repo.rs
src/domain/workspace/: repo.rs
src/ports/: cache.rs  config_store.rs  mod.rs  task_repository.rs
