[package]
name = "asana-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# Async runtime and HTTP client
tokio = { version = "1.45", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Caching
moka = { version = "0.12", features = ["future"] }
dashmap = "6.1"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# CLI and configuration
clap = { version = "4.5", features = ["derive"] }
dirs = "6.0"

# Secure credential storage
keyring = "3.6"

# Markdown parsing

# HTML to markdown conversion
htmd = "0.2"
kuchiki = "0.8"

# Fuzzy search
nucleo = "0.5"

# Error handling
thiserror = "2.0"
color-eyre = "0.6"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# UUID handling
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL encoding
urlencoding = "2.1"
# Markdown parsing
pulldown-cmark = "0.11"
unicode-width = "0.1"

[dev-dependencies]
tokio-test = "0.4"
